syntax = "proto3";
package accountPackage;

service AccountService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Me(MeRequest) returns (MeResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);

}

message RegisterRequest {
  string username = 1;
  string nickname = 2;
  string password = 3;
  string password_confirm = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message MeRequest {

}

message LogoutRequest {

}

message RegisterResponse {

}

message LoginResponse {

}

message MeResponse {

}

message LogoutResponse {

}

